# HeiConnect

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  build_and_install_lemon.sh  run_example.sh  run_examples.sh
app/: solver.cpp
docs/: algorithms.md
graphs/dimacs10/clustering/: email.xml  jazz.xml  karate.xml  power.xml
graphs/dimacs10/walshaw/graphs/: t60k.xml  vibrobox.xml
graphs/misc/: cycle-10.graph  cycle-10.xml  cycle-100.graph  cycle-100.xml  cycle-1000.graph  cycle-1000.xml  cycle-100_0.5.links  cycle-15.graph  cycle-15.xml  cycle-150.graph  cycle-150.xml  cycle-1500.graph  cycle-1500.xml  cycle-20.graph  cycle-20.xml  cycle-200.graph  cycle-200.xml  cycle-2000.graph  cycle-2000.xml  cycle-25.graph  cycle-25.xml  cycle-300.graph  cycle-300.xml  cycle-5.graph  cycle-5.xml  cycle-50.graph  cycle-50.xml  cycle-500.graph  cycle-500.xml  cycle-5000.graph  cycle-5000.xml  cycle-6.graph  cycle-6.xml  cycle-7.graph  cycle-7.xml  cycle-75.graph  cycle-75.xml  cycle-8.graph  cycle-8.xml  cycle-9.graph  (+27 more)
src/: Solver.cpp  alternating_paths.hpp  approx.cpp  approx.hpp  config.cpp  config.hpp  graph.cpp  graph.hpp  greedy.cpp  greedy.hpp  gurobi_util.hpp  ilp.cpp  ilp.hpp  kruskal_mst.hpp  max_flow.hpp  ring_graph.cpp  ring_graph.hpp  util.cpp  util.hpp  viecut_runner.hpp  watanabe.cpp  watanabe.hpp
